macOS: stabilize OpenRV build (Qt 6.6, AGL workaround, disable optional plugins)
This commit stabilizes OpenRV on macOS (Apple Silicon, macOS Tahoe) and completes a successful RV.app build.

Key changes:
- Added build options to disable optional components:
  - RV_BUILD_PYSIDE (disable PySide6)
  - RV_BUILD_NDI (disable NDI output plugin)
  - RV_BUILD_TESTS (disable test targets)
- Implemented a dummy AGL.framework workaround to satisfy Qt/OpenGL link requirements on modern macOS where AGL is removed.
- Fixed multiple NULL-pointer crashes in Mu/Python integration by adding defensive checks before Python C-API calls.
- Hardened Python startup paths to tolerate missing optional Qt/PySide components.
- Ensured PySide6 and Homebrew Qt are not pulled into the build.
- Verified RV.app builds and launches successfully on Apple Silicon (arm64).

Result:
- RV.app builds successfully on macOS using Qt 6.6.x.
- No startup crashes.
- Optional plugin warnings are non-fatal.
- This commit represents a stable macOS build checkpoint.

Note:
RV.app is not committed to the repository. Built artifacts are excluded per standard practice.

--- a/src/bin/python/py-interp/CMakeLists.txt
+++ b/src/bin/python/py-interp/CMakeLists.txt
@@ -68,8 +68,10 @@ ADD_CUSTOM_TARGET(
 
 ADD_DEPENDENCIES(compiled_python_source_modules pyc_generation)
 
-ADD_TEST(
-  NAME "py-interp ${python_test_file_name}"
-  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-  COMMAND ${CMAKE_COMMAND} -E env QT_QPA_PLATFORM=minimal "$<TARGET_FILE:${_target}>" -m unittest --verbose
-)
+IF(RV_BUILD_TESTS)
+  ADD_TEST(
+    NAME "py-interp ${python_test_file_name}"
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+    COMMAND ${CMAKE_COMMAND} -E env QT_QPA_PLATFORM=minimal "$<TARGET_FILE:${_target}>" -m unittest --verbose
+  )
+ENDIF()
