--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,7 +94,12 @@ INCLUDE(rv_targets) # RV's build platform definitions
 INCLUDE(rv_globals) # RV's CMake-build global variables
 INCLUDE(rv_stage) # RV's local appplication packaging
 INCLUDE(rv_vfx)
-INCLUDE(CTest)
+IF(RV_BUILD_TESTS)
+  INCLUDE(CTest)
+  ENABLE_TESTING()
+ELSE()
+  MESSAGE(STATUS "Tests are disabled (RV_BUILD_TESTS=OFF)")
+ENDIF()
 
 # The 'cxx_defaults' module will sets global C/C++ compiler defaults Note that variable such as 'CMAKE_CXX_COMPILER_ID' is only available after the 'project'
 # statement just above.
