--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -5,24 +5,24 @@ on:
 
 jobs:
   sanity:
-    runs-on: macos-14
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - name: arm64
+            runs_on: macos-14
+          - name: x86_64
+            runs_on: macos-15-intel
 
-      - name: Print macOS environment
+    runs-on: ${{ matrix.runs_on }}
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Print environment
         shell: bash
         run: |
           set -euxo pipefail
-          echo "Runner:"
+          echo "arch: $(uname -m)"
           sw_vers
-          echo "Hardware:"
-          uname -a
-          echo "Xcode:"
           xcodebuild -version
-          echo "Clang:"
-          clang --version
-          echo "CMake (if present):"
-          cmake --version || true
-          echo "Python:"
-          python3 --version
