--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -26,10 +26,11 @@ jobs:
           set -euxo pipefail
           echo "arch: $(uname -m)"
           sw_vers
-          echo "zsh: $(zsh --version)"
           xcodebuild -version
           clang --version
+          zsh --version
 
+      # OpenRV macOS docs (CY2024) call out Python 3.11.14
       - name: Setup Python 3.11
         uses: actions/setup-python@v5
         with:
@@ -50,65 +51,100 @@ jobs:
           brew update
           brew --version
 
-      - name: Install build tools (cmake, ninja)
+      # OpenRV macOS docs warn Homebrew CMake v4 is too new; install CMake 3.31.7 from the official dmg
+      - name: Install CMake 3.31.7 (per OpenRV macOS docs)
         shell: bash
         run: |
           set -euxo pipefail
-          brew install cmake ninja
-          cmake --version
+
+          CMAKE_DMG_URL="https://github.com/Kitware/CMake/releases/download/v3.31.7/cmake-3.31.7-macos-universal.dmg"
+          curl -L "$CMAKE_DMG_URL" -o /tmp/cmake.dmg
+
+          MOUNT_POINT="$(hdiutil attach /tmp/cmake.dmg | awk 'END{print $3}')"
+          # Install cmake binaries into /usr/local/bin (runner has sudo)
+          sudo "$MOUNT_POINT/CMake.app/Contents/bin/cmake-gui" --install=/usr/local/bin
+          hdiutil detach "$MOUNT_POINT"
+
+          /usr/local/bin/cmake --version
+
+      - name: Install macOS build dependencies (CY2024 list, except Qt)
+        shell: bash
+        run: |
+          set -euxo pipefail
+          # From OpenRV "Preparing on macOS" (CY2024): ninja readline sqlite3 xz zlib tcl-tk@8 autoconf automake libtool
+          # yasm clang-format black meson nasm pkg-config glew rust
+          brew install \
+            ninja readline sqlite3 xz zlib tcl-tk@8 \
+            autoconf automake libtool \
+            yasm clang-format black meson nasm pkg-config glew rust
+
           ninja --version
-          python --version
+          rustc --version || true
 
-      - name: Build OpenRV (run zsh init then scripts)
+      # Qt from Homebrew is known to not work well with OpenRV; install Qt 6.5.3 via aqtinstall into ~/Qt
+      # aqt docs note mac Qt binaries are universal, so clang_64 is appropriate for mac installs.
+      - name: Install Qt 6.5.3 (aqtinstall) and set QT_HOME
         shell: bash
         run: |
           set -euxo pipefail
 
-          # Run the zsh-oriented env init + build in one zsh login shell
+          python -m pip install --upgrade pip
+          python -m pip install "aqtinstall>=3.2.0"
+
+          QT_DIR="$HOME/Qt"
+          mkdir -p "$QT_DIR"
+
+          # Install Qt 6.5.3 for mac desktop (universal)
+          aqt install-qt mac desktop 6.5.3 clang_64 -O "$QT_DIR"
+
+          # Typical layout: ~/Qt/6.5.3/macos (or ~/Qt/6.5.3/clang_64)
+          if [ -d "$QT_DIR/6.5.3/macos" ]; then
+            echo "QT_HOME=$QT_DIR/6.5.3/macos" >> "$GITHUB_ENV"
+          elif [ -d "$QT_DIR/6.5.3/clang_64" ]; then
+            echo "QT_HOME=$QT_DIR/6.5.3/clang_64" >> "$GITHUB_ENV"
+          else
+            echo "ERROR: Qt install path not found. Contents:"
+            find "$QT_DIR" -maxdepth 4 -type d | sed -n '1,200p'
+            exit 1
+          fi
+
+          echo "QT_HOME=$QT_HOME"
+          ls -la "$QT_HOME" | sed -n '1,200p'
+
+      - name: Build OpenRV (rvbootstrap via rvcmds.sh)
+        shell: bash
+        run: |
+          set -euxo pipefail
+
+          # Run in zsh because rvcmds.sh expects zsh context variables
           zsh -lc '
             set -euo pipefail
+            export QT_HOME="'"$QT_HOME"'"
+            echo "Using QT_HOME=$QT_HOME"
 
-            if [ -f "./rvcmds.sh" ]; then
-              echo "Initializing env with rvcmds.sh (zsh)"
-              source ./rvcmds.sh
-            fi
+            # Use the common build instructions: source aliases then run rvbootstrap
+            source ./rvcmds.sh
 
-            if [ -x "./rvbootstrap" ] || [ -f "./rvbootstrap" ]; then
-              echo "Running ./rvbootstrap"
-              ./rvbootstrap
-            else
-              echo "ERROR: rvbootstrap not found at repo root."
-              ls -la
-              exit 1
-            fi
-
-            if [ -x "./rvmk" ] || [ -f "./rvmk" ]; then
-              echo "Running ./rvmk"
-              ./rvmk
-            else
-              echo "ERROR: rvmk not found at repo root."
-              ls -la
-              exit 1
-            fi
+            # First-time build (creates .venv, fetches deps, builds)
+            rvbootstrap
           '
 
-      - name: Package stage (if present)
+      - name: Verify output exists
+        shell: bash
+        run: |
+          set -euxo pipefail
+          test -f "_build/stage/app/RV.app/Contents/MacOS/RV"
+          ls -la "_build/stage/app/RV.app/Contents/MacOS" | sed -n '1,200p'
+
+      - name: Package RV.app
         shell: bash
         run: |
           set -euxo pipefail
           mkdir -p artifacts
-
-          if [ -d "_build/stage" ]; then
-            tar -czf "artifacts/openrv-macos-${{ matrix.name }}-stage.tar.gz" -C "_build" stage
-          elif [ -d "_build" ]; then
-            tar -czf "artifacts/openrv-macos-${{ matrix.name }}-_build.tar.gz" -C "." _build
-          else
-            echo "ERROR: No _build directory produced."
-            exit 1
-          fi
+          ditto -c -k --sequesterRsrc --keepParent "_build/stage/app/RV.app" "artifacts/RV-${{ matrix.name }}.zip"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: openrv-macos-${{ matrix.name }}
-          path: artifacts/*
+          path: artifacts/RV-${{ matrix.name }}.zip
