--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -30,7 +30,6 @@ jobs:
           clang --version
           zsh --version
 
-      # OpenRV macOS docs (CY2024) call out Python 3.11.14
       - name: Setup Python 3.11
         uses: actions/setup-python@v5
         with:
@@ -51,7 +50,8 @@ jobs:
           brew update
           brew --version
 
-      # OpenRV macOS docs warn Homebrew CMake v4 is too new; install CMake 3.31.7 from the official dmg
+      # IMPORTANT FIX: Install CMake.app to /Applications before linking.
+      # If you link while mounted, the symlinks point at /Volumes/... and break after detach.
       - name: Install CMake 3.31.7 (per OpenRV macOS docs)
         shell: bash
         run: |
@@ -61,28 +61,25 @@ jobs:
           curl -L "$CMAKE_DMG_URL" -o /tmp/cmake.dmg
 
           MOUNT_POINT="$(hdiutil attach /tmp/cmake.dmg | awk 'END{print $3}')"
-          # Install cmake binaries into /usr/local/bin (runner has sudo)
-          sudo "$MOUNT_POINT/CMake.app/Contents/bin/cmake-gui" --install=/usr/local/bin
+          sudo rm -rf /Applications/CMake.app
+          sudo cp -R "$MOUNT_POINT/CMake.app" /Applications/CMake.app
           hdiutil detach "$MOUNT_POINT"
 
-          /usr/local/bin/cmake --version
+          # Put CMake.app binaries on PATH (no fragile /usr/local symlinks needed)
+          echo "/Applications/CMake.app/Contents/bin" >> "$GITHUB_PATH"
+          cmake --version
 
       - name: Install macOS build dependencies (CY2024 list, except Qt)
         shell: bash
         run: |
           set -euxo pipefail
-          # From OpenRV "Preparing on macOS" (CY2024): ninja readline sqlite3 xz zlib tcl-tk@8 autoconf automake libtool
-          # yasm clang-format black meson nasm pkg-config glew rust
           brew install \
             ninja readline sqlite3 xz zlib tcl-tk@8 \
             autoconf automake libtool \
             yasm clang-format black meson nasm pkg-config glew rust
-
           ninja --version
           rustc --version || true
 
-      # Qt from Homebrew is known to not work well with OpenRV; install Qt 6.5.3 via aqtinstall into ~/Qt
-      # aqt docs note mac Qt binaries are universal, so clang_64 is appropriate for mac installs.
       - name: Install Qt 6.5.3 (aqtinstall) and set QT_HOME
         shell: bash
         run: |
@@ -94,10 +91,8 @@ jobs:
           QT_DIR="$HOME/Qt"
           mkdir -p "$QT_DIR"
 
-          # Install Qt 6.5.3 for mac desktop (universal)
           aqt install-qt mac desktop 6.5.3 clang_64 -O "$QT_DIR"
 
-          # Typical layout: ~/Qt/6.5.3/macos (or ~/Qt/6.5.3/clang_64)
           if [ -d "$QT_DIR/6.5.3/macos" ]; then
             echo "QT_HOME=$QT_DIR/6.5.3/macos" >> "$GITHUB_ENV"
           elif [ -d "$QT_DIR/6.5.3/clang_64" ]; then
@@ -108,24 +103,16 @@ jobs:
             exit 1
           fi
 
-          echo "QT_HOME=$QT_HOME"
-          ls -la "$QT_HOME" | sed -n '1,200p'
-
       - name: Build OpenRV (rvbootstrap via rvcmds.sh)
         shell: bash
         run: |
           set -euxo pipefail
 
-          # Run in zsh because rvcmds.sh expects zsh context variables
           zsh -lc '
             set -euo pipefail
             export QT_HOME="'"$QT_HOME"'"
             echo "Using QT_HOME=$QT_HOME"
-
-            # Use the common build instructions: source aliases then run rvbootstrap
             source ./rvcmds.sh
-
-            # First-time build (creates .venv, fetches deps, builds)
             rvbootstrap
           '
 
