--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -50,13 +50,10 @@ jobs:
           brew update
           brew --version
 
-      # IMPORTANT FIX: Install CMake.app to /Applications before linking.
-      # If you link while mounted, the symlinks point at /Volumes/... and break after detach.
       - name: Install CMake 3.31.7 (per OpenRV macOS docs)
         shell: bash
         run: |
           set -euxo pipefail
-
           CMAKE_DMG_URL="https://github.com/Kitware/CMake/releases/download/v3.31.7/cmake-3.31.7-macos-universal.dmg"
           curl -L "$CMAKE_DMG_URL" -o /tmp/cmake.dmg
 
@@ -65,7 +62,6 @@ jobs:
           sudo cp -R "$MOUNT_POINT/CMake.app" /Applications/CMake.app
           hdiutil detach "$MOUNT_POINT"
 
-          # Put CMake.app binaries on PATH (no fragile /usr/local symlinks needed)
           echo "/Applications/CMake.app/Contents/bin" >> "$GITHUB_PATH"
           cmake --version
 
@@ -84,13 +80,11 @@ jobs:
         shell: bash
         run: |
           set -euxo pipefail
-
           python -m pip install --upgrade pip
           python -m pip install "aqtinstall>=3.2.0"
 
           QT_DIR="$HOME/Qt"
           mkdir -p "$QT_DIR"
-
           aqt install-qt mac desktop 6.5.3 clang_64 -O "$QT_DIR"
 
           if [ -d "$QT_DIR/6.5.3/macos" ]; then
@@ -107,11 +101,16 @@ jobs:
         shell: bash
         run: |
           set -euxo pipefail
-
           zsh -lc '
-            set -euo pipefail
+            set -eo pipefail   # NOTE: no -u here, rvcmds.sh expects unset vars to be allowed
+
             export QT_HOME="'"$QT_HOME"'"
+            # Fix for setuptools env var referenced by rvcmds.sh
+            export SETUPTOOLS_USE_DISTUTILS="${SETUPTOOLS_USE_DISTUTILS:-stdlib}"
+
             echo "Using QT_HOME=$QT_HOME"
+            echo "SETUPTOOLS_USE_DISTUTILS=$SETUPTOOLS_USE_DISTUTILS"
+
             source ./rvcmds.sh
             rvbootstrap
           '
